# Battleships

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  DeploymentPhase.cpp  DeploymentPhase.h  EnemyMovePhase.cpp  EnemyMovePhase.h  Fleet.cpp  Fleet.h  Game.cpp  Game.h  GameOverPhase.cpp  GameOverPhase.h  GameUI.cpp  GameUI.h  Grid.cpp  Grid.h  Login.cpp  Login.h  LoginUI.cpp  LoginUI.h  PlayerMovePhase.cpp  PlayerMovePhase.h  Ship.cpp  Ship.h  Singleton.h  State.cpp  State.h  StateManager.cpp  StateManager.h  main.cpp
Client/src/Network/: MessageType.h  ServerConnection.cpp  ServerConnection.h  ServerMessageQueue.cpp  ServerMessageQueue.h
Server/: CMakeLists.txt
Server/src/: Player.cpp  Player.h  Server.cpp  Server.h  Ship.cpp  Ship.h  main.cpp
